--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
     "@hookform/resolvers": "^2.8.8",
+    "@syncfusion/ej2-react-calendars": "^20.1.47",
+    "@syncfusion/ej2-react-dropdowns": "^20.1.47",
+    "@syncfusion/ej2-react-schedule": "^20.1.47",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
